--- a/simple_vocabulary/simple_vocabulary/Base.lproj/Main.storyboard
+++ b/simple_vocabulary/simple_vocabulary/Base.lproj/Main.storyboard
@@ -24,6 +24,9 @@
                                     <constraint firstAttribute="height" constant="44" id="pee-1c-8jz"/>
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="a07-xd-aTk"/>
+                                </connections>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="whp-k0-L6j">
                                 <rect key="frame" x="0.0" y="108" width="600" height="492"/>
